--- a/style.css
+++ b/style.css
@@ -3,11 +3,40 @@ h1 {
 
 }
 
-#notes-list {
+#books-list {
     list-style-type: none;
     margin-top: 4em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 4; 
 }
 
 .center {
     margin: 20px;
+
+}
+
+img {
+    max-width: 250px;
+    height: auto;
+}
+
+form {
+    margin: 20px;
+}
+
+.data-id {
+    max-width: 250px;
+}
+
+.p-desc {
+    word-wrap: initial;
+    white-space: normal;
+}
+
+.card {
+    max-width: 30em;
+    align-items: center;
+    margin: 2em;
+    padding: .4em;
 }
