--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 h1 {
     color: red;
+    font-weight: 600 !important;
 
 }
 
 #books-list {
     list-style-type: none;
-    margin-top: 4em;
+    margin-top: 2em;
     display: flex;
     flex-wrap: wrap;
     flex-grow: 4; 
+    background-color: #e9ecef;
 }
 
 .center {
