added app.js, modified html and styles for bootstrap, added search

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 .center {
-    margin: 20px;
+    /* margin: 20px; */
 
 }
 
@@ -24,7 +24,7 @@ img {
 }
 
 form {
-    margin: 20px;
+    /* margin: 120px; */
 }
 
 .data-id {
