--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
     margin-top: 2em;
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 4; 
+    flex-grow: 3; 
     background-color: #e9ecef;
 }
 
@@ -19,7 +19,7 @@ h1 {
 }
 
 img {
-    max-width: 250px;
+    max-width: 125px;
     height: auto;
 }
 
@@ -28,7 +28,7 @@ form {
 }
 
 .data-id {
-    max-width: 250px;
+    /* max-width: 175px; */
      /* min-width: 225px; */
 }
 
@@ -39,9 +39,9 @@ form {
 
 .card {
     /* max-width: 25em; */
-    width: 25em;
+    width: 17.5em;
     align-items: center;
-    margin: 2em;
+    margin: .5em;
     padding: .4em;
     /* min-width: 425px; */
 }
